crates/language-v2/tests/src/fail/p2_specifiers/version_not_found/test.stderr
error: Version '3.0.0' does not exist in the language definition.
  --> src/fail/p2_specifiers/version_not_found/test.rs:18:80
   |
18 | ...                   field_1 = Optional(reference = Two, enabled = From("3.0.0")),
   |                                                                          ^^^^^^^
